// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Displays my prescriptions page 1`] = `
"<h1 class=\\"nhsuk-label-wrapper\\"><label class=\\"nhsuk-label nhsuk-label--xl\\">My Prescriptions</label></h1>
<p>You do not have any active prescriptions. Once you create or release a prescription you will see it here</p>"
`;

exports[`Displays released prescriptions from session 1`] = `
"<h1 class=\\"nhsuk-label-wrapper\\"><label class=\\"nhsuk-label nhsuk-label--xl\\">My Prescriptions</label></h1>
<div class=\\"nhsuk-table__panel-with-heading-tab\\">
  <h3 class=\\"nhsuk-table__heading-tab\\">Released Prescriptions</h3>
  <div class=\\"nhsuk-table-responsive\\">
    <table class=\\"nhsuk-table\\">
      <caption class=\\"nhsuk-table__caption\\">Prescriptions ready to dispense</caption>
      <thead class=\\"nhsuk-table__head\\">
        <tr class=\\"nhsuk-table__row\\">
          <th class=\\"nhsuk-table__header\\" scope=\\"col\\">ID</th>
          <th class=\\"nhsuk-table__header\\" scope=\\"col\\">Actions</th>
        </tr>
      </thead>
      <tbody class=\\"nhsuk-table__body\\">
        <tr class=\\"nhsuk-table__row\\">
          <td class=\\"nhsuk-table__cell\\">FC6D78-A83008-EDF7BF</td>
          <td class=\\"nhsuk-table__cell\\">
            <div class=\\"nhsuk-action-link\\"><a class=\\"nhsuk-action-link__link\\" href=\\"baseUrl/dispense/return?prescription_id=FC6D78-A83008-EDF7BF\\"><svg class=\\"nhsuk-icon nhsuk-icon__arrow-right-circle\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 24 24\\" aria-hidden=\\"true\\" height=\\"32\\" width=\\"32\\">
                  <path d=\\"M0 0h24v24H0z\\" fill=\\"none\\"></path>
                  <path d=\\"M12 2a10 10 0 0 0-9.95 9h11.64L9.74 7.05a1 1 0 0 1 1.41-1.41l5.66 5.65a1 1 0 0 1 0 1.42l-5.66 5.65a1 1 0 0 1-1.41 0 1 1 0 0 1 0-1.41L13.69 13H2.05A10 10 0 1 0 12 2z\\"></path>
                </svg><span class=\\"nhsuk-action-link__text\\">Return prescription</span></a></div>
            <div class=\\"nhsuk-action-link\\"><a class=\\"nhsuk-action-link__link\\" href=\\"baseUrl/dispense/dispense?prescription_id=FC6D78-A83008-EDF7BF\\"><svg class=\\"nhsuk-icon nhsuk-icon__arrow-right-circle\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 24 24\\" aria-hidden=\\"true\\" height=\\"32\\" width=\\"32\\">
                  <path d=\\"M0 0h24v24H0z\\" fill=\\"none\\"></path>
                  <path d=\\"M12 2a10 10 0 0 0-9.95 9h11.64L9.74 7.05a1 1 0 0 1 1.41-1.41l5.66 5.65a1 1 0 0 1 0 1.42l-5.66 5.65a1 1 0 0 1-1.41 0 1 1 0 0 1 0-1.41L13.69 13H2.05A10 10 0 1 0 12 2z\\"></path>
                </svg><span class=\\"nhsuk-action-link__text\\">Dispense prescription</span></a></div>
            <div class=\\"nhsuk-action-link\\"><a class=\\"nhsuk-action-link__link\\" href=\\"baseUrl/search?prescription_id=FC6D78-A83008-EDF7BF\\"><svg class=\\"nhsuk-icon nhsuk-icon__arrow-right-circle\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 24 24\\" aria-hidden=\\"true\\" height=\\"32\\" width=\\"32\\">
                  <path d=\\"M0 0h24v24H0z\\" fill=\\"none\\"></path>
                  <path d=\\"M12 2a10 10 0 0 0-9.95 9h11.64L9.74 7.05a1 1 0 0 1 1.41-1.41l5.66 5.65a1 1 0 0 1 0 1.42l-5.66 5.65a1 1 0 0 1-1.41 0 1 1 0 0 1 0-1.41L13.69 13H2.05A10 10 0 1 0 12 2z\\"></path>
                </svg><span class=\\"nhsuk-action-link__text\\">View prescription</span></a></div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>"
`;

exports[`Displays sent prescriptions from session 1`] = `
"<h1 class=\\"nhsuk-label-wrapper\\"><label class=\\"nhsuk-label nhsuk-label--xl\\">My Prescriptions</label></h1>
<div class=\\"nhsuk-table__panel-with-heading-tab\\">
  <h3 class=\\"nhsuk-table__heading-tab\\">Sent Prescriptions</h3>
  <div class=\\"nhsuk-table-responsive\\">
    <table class=\\"nhsuk-table\\">
      <caption class=\\"nhsuk-table__caption\\">Prescriptions ready to release</caption>
      <thead class=\\"nhsuk-table__head\\">
        <tr class=\\"nhsuk-table__row\\">
          <th class=\\"nhsuk-table__header\\" scope=\\"col\\">ID</th>
          <th class=\\"nhsuk-table__header\\" scope=\\"col\\">Actions</th>
        </tr>
      </thead>
      <tbody class=\\"nhsuk-table__body\\">
        <tr class=\\"nhsuk-table__row\\">
          <td class=\\"nhsuk-table__cell\\">FC6D78-A83008-EDF7BI</td>
          <td class=\\"nhsuk-table__cell\\">
            <div class=\\"nhsuk-action-link\\"><a class=\\"nhsuk-action-link__link\\" href=\\"baseUrl/dispense/release?prescription_id=FC6D78-A83008-EDF7BI\\"><svg class=\\"nhsuk-icon nhsuk-icon__arrow-right-circle\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 24 24\\" aria-hidden=\\"true\\" height=\\"32\\" width=\\"32\\">
                  <path d=\\"M0 0h24v24H0z\\" fill=\\"none\\"></path>
                  <path d=\\"M12 2a10 10 0 0 0-9.95 9h11.64L9.74 7.05a1 1 0 0 1 1.41-1.41l5.66 5.65a1 1 0 0 1 0 1.42l-5.66 5.65a1 1 0 0 1-1.41 0 1 1 0 0 1 0-1.41L13.69 13H2.05A10 10 0 1 0 12 2z\\"></path>
                </svg><span class=\\"nhsuk-action-link__text\\">Release prescription</span></a></div>
            <div class=\\"nhsuk-action-link\\"><a class=\\"nhsuk-action-link__link\\" href=\\"baseUrl/search?prescription_id=FC6D78-A83008-EDF7BI\\"><svg class=\\"nhsuk-icon nhsuk-icon__arrow-right-circle\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 24 24\\" aria-hidden=\\"true\\" height=\\"32\\" width=\\"32\\">
                  <path d=\\"M0 0h24v24H0z\\" fill=\\"none\\"></path>
                  <path d=\\"M12 2a10 10 0 0 0-9.95 9h11.64L9.74 7.05a1 1 0 0 1 1.41-1.41l5.66 5.65a1 1 0 0 1 0 1.42l-5.66 5.65a1 1 0 0 1-1.41 0 1 1 0 0 1 0-1.41L13.69 13H2.05A10 10 0 1 0 12 2z\\"></path>
                </svg><span class=\\"nhsuk-action-link__text\\">View prescription</span></a></div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>"
`;
